[gd_scene load_steps=33 format=3 uid="uid://f2fpqdbmtfoq"]

[ext_resource type="Script" path="res://components/movement/3D/first_person_controller/first_person_controller.gd" id="1_8uks7"]
[ext_resource type="PackedScene" uid="uid://bhoyu1xymijld" path="res://components/movement/3D/first_person_controller/debug/debug_information.tscn" id="2_ph8rr"]
[ext_resource type="Script" path="res://components/movement/3D/first_person_controller/effects/swing_head.gd" id="3_6ivj0"]
[ext_resource type="Script" path="res://components/movement/3D/first_person_controller/effects/camera_mouse_rotator.gd" id="3_6k3ux"]
[ext_resource type="Script" path="res://components/camera/3D/shake/shake_camera_3d.gd" id="3_b4tnm"]
[ext_resource type="Script" path="res://components/movement/3D/first_person_controller/effects/head_bobbing.gd" id="4_0hnr6"]
[ext_resource type="Script" path="res://components/movement/3D/first_person_controller/mechanics/wall_detector_3d.gd" id="4_ds6nt"]
[ext_resource type="Script" path="res://components/camera/3D/shake/trauma_detector_3d.gd" id="4_l1nxd"]
[ext_resource type="Script" path="res://components/interaction/throwable/throwable_interactor.gd" id="5_dc2ch"]
[ext_resource type="Script" path="res://components/movement/3D/first_person_controller/mechanics/stair_stepper_3d.gd" id="6_tsu5a"]
[ext_resource type="Script" path="res://components/behaviour/state-machines/hierarchical-state-machine/finite-state-machine.gd" id="6_ydo46"]
[ext_resource type="Script" path="res://components/movement/3D/first_person_controller/states/ground/idle.gd" id="7_hffd2"]
[ext_resource type="Script" path="res://components/movement/3D/first_person_controller/states/ground/walk.gd" id="9_jxtby"]
[ext_resource type="Script" path="res://components/movement/3D/first_person_controller/states/ground/run.gd" id="9_ywaay"]
[ext_resource type="Script" path="res://components/movement/3D/first_person_controller/states/air/jump.gd" id="10_8dxn5"]
[ext_resource type="Script" path="res://components/movement/3D/first_person_controller/states/ground/crouch.gd" id="10_75y82"]
[ext_resource type="Script" path="res://components/movement/3D/first_person_controller/states/air/fall.gd" id="11_180cg"]
[ext_resource type="Script" path="res://components/movement/3D/first_person_controller/states/ground/crawl.gd" id="11_fo3r4"]
[ext_resource type="Script" path="res://components/movement/3D/first_person_controller/states/ground/slide.gd" id="13_rfvqu"]
[ext_resource type="Script" path="res://components/movement/3D/first_person_controller/states/air/wall_run.gd" id="16_h45s0"]
[ext_resource type="Script" path="res://components/interaction/telekinesis/telekinesis_3d.gd" id="19_u1kda"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wjy4n"]
radius = 0.307085
height = 2.28637

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8dljh"]
radius = 0.307085
height = 1.51983

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_euekl"]
radius = 0.307085
height = 0.823212

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_p0380"]
radius = 0.25
height = 0.8

[sub_resource type="FastNoiseLite" id="FastNoiseLite_woey4"]
noise_type = 3

[sub_resource type="SphereShape3D" id="SphereShape3D_0hhx5"]
radius = 3.01907

[sub_resource type="Animation" id="Animation_ihm82"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.849407, 0)]
}

[sub_resource type="Animation" id="Animation_x5317"]
resource_name = "crawl"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.086, 0), Vector3(0, -0.587122, 0)]
}

[sub_resource type="Animation" id="Animation_k651i"]
resource_name = "crouch"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.849407, 0), Vector3(0, 0.0864832, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t7jyt"]
_data = {
"RESET": SubResource("Animation_ihm82"),
"crawl": SubResource("Animation_x5317"),
"crouch": SubResource("Animation_k651i")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_fxkdq"]
height = 5.45849
radius = 2.19644

[node name="FirstPersonController" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_8uks7")
slide = true
wall_jump = true
wall_run = true
crawl = true
swing_head = true
head_bobbing = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="DebugInformation" parent="UI" node_paths=PackedStringArray("actor") instance=ExtResource("2_ph8rr")]
actor = NodePath("../..")

[node name="StandCollisionShape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_wjy4n")
disabled = true

[node name="CrouchCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.384607, 0)
shape = SubResource("CapsuleShape3D_8dljh")
disabled = true

[node name="CrawlCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.73894, 0)
shape = SubResource("CapsuleShape3D_euekl")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.849407, 0)

[node name="CeilShapeCast" type="ShapeCast3D" parent="Head"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.93766, 0)
shape = SubResource("CapsuleShape3D_p0380")
exclude_parent = false

[node name="Eyes" type="Node3D" parent="Head"]
unique_name_in_owner = true

[node name="ShakeCamera3D" type="Camera3D" parent="Head/Eyes"]
unique_name_in_owner = true
current = true
script = ExtResource("3_b4tnm")
trauma_reduction_rate = 0.8
noise_speed = 75.0
noise = SubResource("FastNoiseLite_woey4")

[node name="TraumaDetector3D" type="Area3D" parent="Head/Eyes" node_paths=PackedStringArray("camera")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.849407, 0)
script = ExtResource("4_l1nxd")
camera = NodePath("../ShakeCamera3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/Eyes/TraumaDetector3D"]
shape = SubResource("SphereShape3D_0hhx5")

[node name="ThrowableInteractor" type="RayCast3D" parent="Head/Eyes"]
script = ExtResource("5_dc2ch")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t7jyt")
}

[node name="Telekinesis3D" type="Node3D" parent="." node_paths=PackedStringArray("actor", "throwable_interactor", "throwable_area_detector")]
script = ExtResource("19_u1kda")
actor = NodePath("..")
push_wave_ability = false
throwable_interactor = NodePath("../Head/Eyes/ThrowableInteractor")
throwable_area_detector = NodePath("ThrowableAreaDetector")

[node name="Marker3D" type="Marker3D" parent="Telekinesis3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.882937, 0.579345, -1.14356)

[node name="Marker3D2" type="Marker3D" parent="Telekinesis3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.573432, 1.27039, -1.14356)

[node name="Marker3D3" type="Marker3D" parent="Telekinesis3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.72926, 1.27039, -1.14356)

[node name="Marker3D4" type="Marker3D" parent="Telekinesis3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.864762, 0.558245, -1.14356)

[node name="ThrowableAreaDetector" type="Area3D" parent="Telekinesis3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Telekinesis3D/ThrowableAreaDetector"]
transform = Transform3D(1, 0, 0, 0, 0.0519873, 0.998648, 0, -0.998648, 0.0519873, 0, 0.76139, -3.12228)
shape = SubResource("CylinderShape3D_fxkdq")

[node name="FirstPersonCameraMouseRotator" type="Node3D" parent="." node_paths=PackedStringArray("actor", "eyes")]
script = ExtResource("3_6k3ux")
actor = NodePath("..")
eyes = NodePath("../Head/Eyes")

[node name="WallDetector3D" type="Node3D" parent="."]
script = ExtResource("4_ds6nt")
right_distance_detector = 0.65
left_distance_detector = 0.65
front_distance_detector = 0.65
top_front_detector_position = Vector3(0, 0.65, 0)
bottom_front_detector_position = Vector3(0, -0.5, 0)

[node name="StairStepper3D" type="Node3D" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("6_tsu5a")
actor = NodePath("..")

[node name="SwingHeadEffect" type="Node3D" parent="." node_paths=PackedStringArray("actor", "eyes")]
script = ExtResource("3_6ivj0")
actor = NodePath("..")
eyes = NodePath("../Head/Eyes")

[node name="HeadBobbingEffect" type="Node3D" parent="." node_paths=PackedStringArray("actor", "eyes")]
script = ExtResource("4_0hnr6")
actor = NodePath("..")
eyes = NodePath("../Head/Eyes")

[node name="MotionFiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("6_ydo46")
current_state = NodePath("Ground/Idle")

[node name="Ground" type="Node" parent="MotionFiniteStateMachine"]

[node name="Idle" type="Node" parent="MotionFiniteStateMachine/Ground" node_paths=PackedStringArray("actor")]
script = ExtResource("7_hffd2")
actor = NodePath("../../..")

[node name="Walk" type="Node" parent="MotionFiniteStateMachine/Ground" node_paths=PackedStringArray("actor")]
script = ExtResource("9_jxtby")
actor = NodePath("../../..")

[node name="Run" type="Node" parent="MotionFiniteStateMachine/Ground" node_paths=PackedStringArray("actor")]
script = ExtResource("9_ywaay")
acceleration = 0
actor = NodePath("../../..")

[node name="Crouch" type="Node" parent="MotionFiniteStateMachine/Ground" node_paths=PackedStringArray("actor")]
script = ExtResource("10_75y82")
actor = NodePath("../../..")

[node name="Crawl" type="Node" parent="MotionFiniteStateMachine/Ground" node_paths=PackedStringArray("actor")]
script = ExtResource("11_fo3r4")
actor = NodePath("../../..")

[node name="Slide" type="Node" parent="MotionFiniteStateMachine/Ground" node_paths=PackedStringArray("actor")]
script = ExtResource("13_rfvqu")
speed = 8.5
actor = NodePath("../../..")

[node name="Air" type="Node" parent="MotionFiniteStateMachine"]

[node name="Jump" type="Node" parent="MotionFiniteStateMachine/Air" node_paths=PackedStringArray("actor")]
script = ExtResource("10_8dxn5")
jump_height = 4.0
jump_time_to_peak = 0.45
jump_time_to_fall = 0.5
actor = NodePath("../../..")

[node name="Fall" type="Node" parent="MotionFiniteStateMachine/Air" node_paths=PackedStringArray("actor")]
script = ExtResource("11_180cg")
air_control_speed = null
air_control_acceleration = null
air_control_friction = null
coyote_time = null
coyote_time_frames = null
jump_buffer = null
jump_buffer_time_frames = null
actor = NodePath("../../..")
gravity_force = null
jump_input_action = null

[node name="WallRun" type="Node" parent="MotionFiniteStateMachine/Air" node_paths=PackedStringArray("actor")]
script = ExtResource("16_h45s0")
actor = NodePath("../../..")
